--- a/Utilities/css/style.css
+++ b/Utilities/css/style.css
@@ -43,7 +43,7 @@ body {
 .dashboard_container {
   width: 25%;
   height: 100%;
-  background: linear-gradient(168.68deg, #6AD4DD 1.12%, #97E7E1 100%);
+  background: linear-gradient(168.68deg, #0052c9 1.12%, #0a91db 100%);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -459,7 +459,7 @@ body {
   left: 0;
   top: 0;
   background: rgba(196, 196, 196, 0.2);
-  background-filter: blur(100px);
+  background-filter: blur(80px);
 }
 
 .video_recording_buttons_container {
