auth routes added ...

--- a/next/components/common/input/camera/index.module.scss
+++ b/next/components/common/input/camera/index.module.scss
@@ -7,14 +7,14 @@
     overflow: hidden !important;
   }
   .webcam {
-    background-color: $color-text;
+    // background-color: $color-text;
     border-radius: 8px !important;
     overflow: hidden;
   }
   .start {
     width: fit-content;
     margin: 0 auto;
-    background-color: $color-primary;
+    // background-color: $color-primary;
     color: white;
   }
 }
