--- a/next/components/common/input/checkbox/index.module.scss
+++ b/next/components/common/input/checkbox/index.module.scss
@@ -11,7 +11,7 @@
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  color: $color-text;
+  // color: $color-text;
   width: 100%;
   input {
     position: absolute;
@@ -21,7 +21,7 @@
     width: 0;
     &:checked {
       ~ .checkmark {
-        background-color: $color-primary;
+        // background-color: $color-primary;
         &:after {
           display: block;
         }
@@ -34,9 +34,9 @@
     right: 0;
     height: 20px;
     width: 20px;
-    background-color: $color-white;
+    // background-color: $color-white;
     border-radius: 4px;
-    border: 1px solid $color-border;
+    // border: 1px solid $color-border;
     &:after {
       content: "";
       position: absolute;
