--- a/next/components/common/input/datePicker/index.module.scss
+++ b/next/components/common/input/datePicker/index.module.scss
@@ -1,12 +1,12 @@
 @import "@/styles/colors";
 .wrapper {
-  background-color: $color-white;
+  // background-color: $color-white;
   width: 100%;
   height: 42px;
   padding: 0px 1rem;
-  color: $color-text;
+  // color: $color-text;
   border-radius: 8px;
-  border: 1px solid $color-border;
+  // border: 1px solid $color-border;
   margin-top: 8px;
 }
 
@@ -18,7 +18,7 @@
   width: 100%;
   label {
     font-size: 14px;
-    color: $color-placeholder;
+    // color: $color-placeholder;
     margin-bottom: 2rem !important;
   }
 }
