--- a/next/components/common/input/radio/index.module.scss
+++ b/next/components/common/input/radio/index.module.scss
@@ -29,7 +29,7 @@
   width: 21px;
   background-color: transparent;
   border-radius: 50%;
-  border: 1px solid $color-border;
+  // border: 1px solid $color-border;
 }
 
 /* On mouse-over, add a grey background color */
@@ -40,7 +40,7 @@
 /* When the radio button is checked, add a blue background */
 .container input:checked ~ .checkmark {
   background-color: transparent;
-  border: 1px solid $color-primary;
+  // border: 1px solid $color-primary;
 }
 
 /* Create the indicator (the dot/circle - hidden when not checked) */
@@ -62,5 +62,5 @@
   width: 11px;
   height: 11px;
   border-radius: 50%;
-  background: $color-primary;
+  // background: $color-primary;
 }
