--- a/next/components/common/input/search/index.module.scss
+++ b/next/components/common/input/search/index.module.scss
@@ -5,16 +5,16 @@
   gap: 8px;
   margin: 0px 12px;
   overflow: hidden;
-  border: 1px solid $color-border;
+  // border: 1px solid $color-border;
   border-radius: 10px;
-  background-color: $color-white;
+  // background-color: $color-white;
   .input {
     height: 30px;
-    color: $color-text;
+    // color: $color-text;
     background-color: inherit;
     border: none;
     &::placeholder {
-      color: $color-placeholder;
+      // color: $color-placeholder;
     }
   }
 }
