--- a/next/components/common/input/textField/index.module.scss
+++ b/next/components/common/input/textField/index.module.scss
@@ -6,21 +6,21 @@
   gap: 8px;
   overflow: hidden;
   .label {
-    color: $color-placeholder;
+    // color: $color-placeholder;
   }
   .input-container {
     width: 100%;
     position: relative;
     .input {
       width: 100%;
-      background-color: $color-white;
+      // background-color: $color-white;
       height: 47px;
       padding: 0px 1rem;
-      color: $color-text;
-      border: 1px solid $color-border;
+      // color: $color-text;
+      // border: 1px solid $color-border;
       border-radius: 10px;
       &::placeholder {
-        color: $color-placeholder;
+        // color: $color-placeholder;
       }
       &:focus {
         outline: none;
@@ -40,7 +40,7 @@
     padding-right: 4px;
     span {
       font-size: 12px;
-      color: $color-primary;
+      // color: $color-primary;
     }
   }
 }
