--- a/next/components/common/input/upload/index.module.scss
+++ b/next/components/common/input/upload/index.module.scss
@@ -3,7 +3,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 1px dashed $color-border;
+  // border: 1px dashed $color-border;
   border-radius: 8px;
   position: relative;
   input[type=file]{
@@ -21,7 +21,7 @@
     display: flex;
     align-items: center;
     span {
-      color: $color-border;
+      // color: $color-border;
     }
   }
 }
