--- a/next/components/common/input/checkbox/index.module.scss
+++ b/next/components/common/input/checkbox/index.module.scss
@@ -4,15 +4,12 @@
   direction: rtl;
   position: relative;
   padding-right: 35px;
-  margin-bottom: 11px;
   cursor: pointer;
-  font-size: 14px;
+  font-size: 12px;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  // color: $color-text;
-  width: 100%;
   input {
     position: absolute;
     opacity: 0;
@@ -21,7 +18,7 @@
     width: 0;
     &:checked {
       ~ .checkmark {
-        // background-color: $color-primary;
+        background-color: blue;
         &:after {
           display: block;
         }
@@ -36,7 +33,7 @@
     width: 20px;
     // background-color: $color-white;
     border-radius: 4px;
-    // border: 1px solid $color-border;
+    border: 1px solid gray;
     &:after {
       content: "";
       position: absolute;
