--- a/next/components/pages/conference/layouts/RequestToJoin/index.module.scss
+++ b/next/components/pages/conference/layouts/RequestToJoin/index.module.scss
@@ -1,6 +1,19 @@
 .wrapper{
   width: 100%;
-  height: 150px;
   background-color: white;
   border-radius: 1.5rem;
+  padding: 0.75rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  .title{
+    font-family: medium;
+  }
+  .users{
+    display: flex;
+    flex-direction: column;
+    gap: 0.75rem;
+    max-height: 200px;
+    overflow-y: scroll;
+  }
 }
