--- a/next/components/pages/conference/layouts/TaskList/index.module.scss
+++ b/next/components/pages/conference/layouts/TaskList/index.module.scss
@@ -3,4 +3,8 @@
   height: 150px;
   background-color: white;
   border-radius: 1.5rem;
+  padding: 0.75rem;
+  .title{
+    font-family: medium;
+  }
 }
