--- a/next/components/pages/conference/index.module.scss
+++ b/next/components/pages/conference/index.module.scss
@@ -3,18 +3,19 @@
   background-color: rgb(233, 233, 233);
   width: 100vw;
   height: 100vh;
-  padding: 2.5rem 2rem;
+  padding: 3vh;
   display: flex;
   gap: 1rem;
   .main{
     flex: 1;
+    min-width: 90vh;
+    max-width: 90vh;
     display: flex;
     flex-direction: column;
     gap: 1rem;
   }
   .featuresSidebar{
-    flex: 0.3;
-    max-width: 300px;
+    flex: 1;
     display: flex;
     flex-direction: column;
     gap: 1rem;
