--- a/next/components/pages/conference/layouts/TaskList/index.module.scss
+++ b/next/components/pages/conference/layouts/TaskList/index.module.scss
@@ -1,10 +1,18 @@
 .wrapper{
   width: 100%;
-  height: 150px;
-  background-color: white;
+  background-color: rgb(51, 51, 51);
   border-radius: 1.5rem;
-  padding: 0.75rem;
+  padding: 1rem;
+  gap: 1rem;
+  display: flex;
+  flex-direction: column;
   .title{
     font-family: medium;
+    color: white;
+  }
+  .tasks{
+    display: flex;
+    flex-direction: column;
+    gap: 0.75rem;
   }
 }
