--- a/next/components/common/layout/layout.module.scss
+++ b/next/components/common/layout/layout.module.scss
@@ -3,13 +3,13 @@
   width: 100%;
   .layout {
     width: 100%;
-    // max-width: 1440px;
-    // margin: 0 auto;
+    max-width: 1440px;
+    margin: 0 auto;
   }
 }
 
 @media only screen and (min-width: 678px) and (max-width: 1023px) {
   .layout {
-    max-width: 720px;
+    // max-width: 720px;
   }
 }
