first simple view of conf page

--- a/next/components/pages/conference/index.module.scss
+++ b/next/components/pages/conference/index.module.scss
@@ -1,6 +1,6 @@
 .wrapper {
   direction: rtl;
-  background-color: rgb(233, 233, 233);
+  background-color: rgb(245, 245, 245);
   height: 100vh;
   padding: 3vh;
   display: flex;
@@ -13,8 +13,11 @@
   }
   .featuresSidebar{
     flex: 0.4;
+    overflow: hidden;
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    border-radius: 1.5rem;
+    overflow: hidden;
   }
 }
