--- a/next/styles/globals.scss
+++ b/next/styles/globals.scss
@@ -86,3 +86,7 @@ input::-webkit-inner-spin-button {
 input[type=number] {
   -moz-appearance: textfield;
 }
+
+.css-7hlegj-MultilineTextInput{
+  display: none !important;
+}
