--- a/next/components/pages/conference/layouts/Participants/index.module.scss
+++ b/next/components/pages/conference/layouts/Participants/index.module.scss
@@ -2,4 +2,8 @@
   flex: 1;
   background-color: white;
   border-radius: 1.5rem;
+  padding: 1.25rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
