--- a/next/components/pages/conferences/index.module.scss
+++ b/next/components/pages/conferences/index.module.scss
@@ -5,16 +5,28 @@
   padding: 3vh;
   display: flex;
   gap: 2rem;
-  .main{
+  .main {
     flex: 1;
     display: flex;
     flex-direction: column;
     gap: 2rem;
-    .list{
+    .list {
       display: flex;
       flex-wrap: wrap;
       justify-content: space-between;
+      .add {
+        width: calc(100% / 3 - 1.5rem);
+        background-color: white;
+        border-radius: 1rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-left: auto;
+        margin-right: 2rem;
+        height: calc(50% - 2rem);
+        box-shadow: 0px 0px 20px rgb(212, 212, 212);
+        cursor: pointer;
+      }
     }
   }
-  
 }
