--- a/next/components/common/confSidebar/index.module.scss
+++ b/next/components/common/confSidebar/index.module.scss
@@ -19,6 +19,7 @@
       border: 1px solid rgb(245, 245, 245);
       color: white;
       font-size: 12px;
+      padding: 1rem;
     }
   }
   .user{
